--- a/memo-pri-wedding/package.json
+++ b/memo-pri-wedding/package.json
@@ -16,6 +16,7 @@
         "astro": "^4.4.0",
         "astro-icon": "^1.1.5",
         "node-fetch": "^3.3.2",
+        "swiper": "^11.1.4",
         "tailwindcss": "^3.4.1"
     }
 }
